--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,13 +8,14 @@ keep_md: true
 
 ## Loading and preprocessing the data
 
-1. Unpackage data file from within the *activity.zip* file. Read the data file *activity.csv* into a data.frame.
+1. Unpackage data file from within the *activity.zip* file. Read the data file *activity.csv* into a data.frame. In addition, I convert the date values into Date objects.
 
 NOTE: I assumed only the data file *activity.csv* is within the zip file. Hence, I my routine does not check for multiple files, file names etc.
 ```{r echo = TRUE}
 
 unzip("activity.zip")
 stepData <- read.csv("activity.csv")
+stepData$date <- as.Date(stepData$date)
 
 ```
 
@@ -33,7 +34,7 @@ hist(aggdata$steps, breaks = 25, xlab = "Steps", main = "Histogram of Steps")
 
 aggdataMean <- mean(aggdata$steps)
 aggdataMedian <-median(aggdata$steps)
-print(paste("The mean is", round(aggdataMean, 2))
+print(paste("The mean is", round(aggdataMean, 2)))
 print(paste("The medium is", aggdataMedian))
 
 ```
@@ -42,16 +43,16 @@ print(paste("The medium is", aggdataMedian))
 
 ## What is the average daily activity pattern?
 1. Aggregate the steps by interval period, using mean as the function. Produced a line plot, with interval as the x-axis and steps for the y-axis
-
 ```{r echo = TRUE}
 
 aggdata2 <- aggregate(steps ~ interval, data=stepData, mean)
-plot(aggdata2, type = "l")
+plot(aggdata2, type = "l", main = "Line Plot of Steps versus 5-Minute Interval Times")
 
 ```
 
-2. - Ordered the aggregated step data, and then selected the first instance to show the highest step date in the set.
+2. Ordered the aggregated step data, and then selected the first instance to show the highest step date in the set.
 ```{r echo = TRUE}
+
 orderAggData2 <- order(aggdata2$steps, decreasing = TRUE)
 maxAggData2 <- aggdata2[orderAggData2[1],]
 print(paste("The maximum 5-minute interval average across all days is", row.names(maxAggData2)))
@@ -63,6 +64,7 @@ print(paste("The maximum 5-minute interval average across all days is", row.name
 ## Imputing missing values
 1. Report the total number of rows with missing data (i.e. NA)
 ```{r echo = TRUE}
+
 sumNaDateData <- sum(is.na(stepData$date))
 sumNaIntervalData <- sum(is.na(stepData$interval))
 sumNaStepData <- sum(is.na(stepData$steps))
@@ -81,35 +83,28 @@ if(sumNaStepData != 0) {
 
 ```
 
-2. The methodolgy I have used to fill in the missing data (i.e. NA values) is to iterate through the dataset, checking the step value for each row. Where the row has an NA steps value, I determine the interval and then create a subet of all rows for that time interval. From the subet a calculate the mean steps (omiting NA values), round the value to zero decimal places and then write the value back into the dataset.
+2. The methodolgy I've used for filling missing data (i.e. NA values) is to iterate through the dataset and checking the step value for each row. For rows with a steps value equal to NA, I determine the interval and then create a subet of all rows for that time interval. From the subet I calculate the mean steps (omiting NA values), round the value to zero decimal places and then write the value back into the dataset.
 
 NOTE: These operations are all performed on a cloned version of the original dataset.
 
 3. Below is the code used to create the new dataset with the missing values filled in 
-
 ```{r echo = TRUE}
+
 tidyData <- stepData
 
 n <- nrow(tidyData)
 
 for(i in 1:n) {
     if(is.na(tidyData[i,1])) {
-        subsetTidyData <- subset(tidyData, interval == data[i,3])
+        subsetTidyData <- subset(tidyData, interval == tidyData[i,3])
         subsetTidyStepData <- na.omit(subsetTidyData$steps)
         tidyData[i,1] <- round(mean(subsetTidyStepData))
+        }
     }
-}
 
 ```
 
-4. 
-
-
-
-
-
-
-
+4. Plot a Histogram of the aggregate step for the new tidy dataset.
 ```{r echo = TRUE}
 
 aggTidyData <- aggregate(steps ~ date, data=tidyData, sum)
@@ -117,7 +112,7 @@ hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "Histogram of Steps"
 
 ```
 
-2. Calculate the _Mean_ and _Medium_
+Calculate the _Mean_ and _Medium_ for the new tidy dataset.
 ```{r echo = TRUE}
 
 aggTidyDataMean <- mean(aggTidyData$steps)
@@ -129,29 +124,57 @@ print(paste("The medium is", aggTidyDataMedian))
 ```
 
 
+By overlying the histogram of the original dataset and the new tidy dataset the difference is clearly illustrated. The method used to fill the missing data has only increased the frequency of the mean, leaving all other bins unchanged.
 ```{r echo = TRUE}
-hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "An overly of both Histograms", col="blue", ylim = c(0, 20))
 
+hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "Overly of both Histograms", col="deepskyblue", ylim = c(0, 20))
 par(new = TRUE)
+hist(aggdata$steps, breaks = 25, xlab = "Steps", main = "", col="royalblue", ylim = c(0, 20))
 
+```
 
-hist(aggdata$steps, breaks = 25, xlab = "Steps", main = "", border="red", ylim = c(0, 20))
+## Are there differences in activity patterns between weekdays and weekends?
+1. Create a character vector containing the day of the week, from the date values in the tidyData dataset and using the weekdays() funcation.
+
+Then create the 'workDays' factor vector based on the day of the week, which indicates if the day is a "weekday" or "weekend". The factor vextor is then bound to the tidyData dataset.
+
+```{r echo = TRUE}
+
+dayOfWeek <- weekdays(tidyData$date)
+workDay <- factor(levels=c("weekend", "weekday"))
+
+for(i in 1:n) {
+    if(dayOfWeek[i] == "Saturday") {
+        workDay[i] <- "weekend"
+        }
+    if(dayOfWeek[i] == "Sunday") {
+        workDay[i] <- "weekend"
+        }
+    else {
+        workDay[i] <- "weekday"
+        }
+    }    
+
+tidyData <- cbind(tidyData, workDay)
 
 ```
 
 
+2. Create seperate subet datasets for weekday and weekend data, and then aggregate the new datasets. The aggregation is steps by time interval.
 
-
-
-
-
-
-
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+The resulting aggregate data is then plotted using the base plot system.
 ```{r echo = TRUE}
+
+weekdayData <- subset(tidyData, workDay == "weekday", select = c(interval, steps, workDay))
+weekendData <- subset(tidyData, workDay == "weekend", select = c(interval, steps, workDay))
+aggdata3 <- aggregate(steps ~ interval, data=weekdayData, mean)
+aggdata4 <- aggregate(steps ~ interval, data=weekendData, mean)
+
+
+par(mfrow=c(2,1), mai = c(0.75, 1.5, 0.5, 1.5))
+plot(aggdata3, type = "l", main = "Weekday" )
+plot(aggdata4, type = "l", main = "Weekend")
+
 
 ```
 
