Reviewed and tidied up code. Labelled code chuncks which produced images, to make life easier.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -10,63 +10,58 @@ keep_md: true
 
 1. Unpackage data file from within the *activity.zip* file. Read the data file *activity.csv* into a data.frame. In addition, I convert the date values into Date objects.
 
-NOTE: I assumed only the data file *activity.csv* is within the zip file. Hence, I my routine does not check for multiple files, file names etc.
-```{r echo = TRUE}
-
+NOTE: Have assumed only the file *activity.csv* is within the zip file. Hence, my routine does not check for multiple files, file names etc.
+```{r load_Data, echo = TRUE}
 unzip("activity.zip")
 stepData <- read.csv("activity.csv")
 stepData$date <- as.Date(stepData$date)
 
 ```
-
-
+  
 ## What is mean total number of steps taken per day?
 1. Aggregate the steps by date, using sum as the function. Plotted a Histogram of aggregate step data.
 ```{r echo = TRUE}
-
 aggdata <- aggregate(steps ~ date, data=stepData, sum)
 hist(aggdata$steps, breaks = 25, xlab = "Steps", main = "Histogram of Steps")
 
 ```
 
-2. Calculate the _Mean_ and _Medium_
+2. Calculate the _Mean_ steps taken per day
 ```{r echo = TRUE}
-
-aggdataMean <- mean(aggdata$steps)
-aggdataMedian <-median(aggdata$steps)
-print(paste("The mean is", round(aggdataMean, 2)))
-print(paste("The medium is", aggdataMedian))
+aggdataMean <- round(mean(aggdata$steps), 2)
+print(paste("The mean is", aggdataMean))
 
 ```
 
+Calculate the _Medium_ steps taken per day
+```{r echo = TRUE}
+aggdataMedian <-median(aggdata$steps)
+print(paste("The medium is", aggdataMedian))
 
-
+```
+  
 ## What is the average daily activity pattern?
 1. Aggregate the steps by interval period, using mean as the function. Produced a line plot, with interval as the x-axis and steps for the y-axis
 ```{r echo = TRUE}
-
 aggdata2 <- aggregate(steps ~ interval, data=stepData, mean)
-plot(aggdata2, type = "l", main = "Line Plot of Steps versus 5-Minute Interval Times")
+plot(aggdata2, type = "l", main = "Line Plot of Average Steps Tken vs 5-Minute Interval Times")
 
 ```
 
 2. Ordered the aggregated step data, and then selected the first instance to show the highest step date in the set.
 ```{r echo = TRUE}
-
 orderAggData2 <- order(aggdata2$steps, decreasing = TRUE)
 maxAggData2 <- aggdata2[orderAggData2[1],]
-print(paste("The maximum 5-minute interval average across all days is", row.names(maxAggData2)))
-
 # NOTE: The are only 288 5-minute intervals in a day.
 # 288 = 24 * (60/5)
+
+print(paste("The maximum 5-minute interval average across all days is", row.names(maxAggData2)))
+
 ```
-
-
-
+  
 ## Imputing missing values
 1. Report the total number of rows with missing data (i.e. NA)
 ```{r echo = TRUE}
-
 sumNaDateData <- sum(is.na(stepData$date))
 sumNaIntervalData <- sum(is.na(stepData$interval))
 sumNaStepData <- sum(is.na(stepData$steps))
@@ -85,13 +80,12 @@ if(sumNaStepData != 0) {
 
 ```
 
-2. The methodolgy I've used for filling missing data (i.e. NA values) is to iterate through the dataset and checking the step value for each row. For rows with a steps value equal to NA, I determine the interval and then create a subet of all rows for that time interval. From the subet I calculate the mean steps (omiting NA values), round the value to zero decimal places and then write the value back into the dataset.
+2. The methodolgy I have used for filling missing data (i.e. NA values), is to iterate through the dataset and checking the step value for each row. For rows with a steps value equal to NA, I determine the interval and then create a subet of all rows for that time interval. From the subet I calculate the mean steps (omiting NA values), round the value to zero decimal places and then write the value back into the dataset.
 
 NOTE: These operations are all performed on a cloned version of the original dataset.
 
 3. Below is the code used to create the new dataset with the missing values filled in 
 ```{r echo = TRUE}
-
 tidyData <- stepData
 
 n <- nrow(tidyData)
@@ -108,7 +102,6 @@ for(i in 1:n) {
 
 4. Plot a Histogram of the aggregate step for the new tidy dataset.
 ```{r echo = TRUE}
-
 aggTidyData <- aggregate(steps ~ date, data=tidyData, sum)
 hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "Histogram of Steps")
 
@@ -116,7 +109,6 @@ hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "Histogram of Steps"
 
 Calculate the _Mean_ and _Medium_ for the new tidy dataset.
 ```{r echo = TRUE}
-
 aggTidyDataMean <- mean(aggTidyData$steps)
 aggTidyDataMedian <-median(aggTidyData$steps)
 
@@ -128,20 +120,18 @@ print(paste("The medium is", aggTidyDataMedian))
 
 By overlying the histogram of the original dataset and the new tidy dataset the difference is clearly illustrated. The method used to fill the missing data has only increased the frequency of the mean, leaving all other bins unchanged.
 ```{r echo = TRUE}
-
 hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "Overly of both Histograms", col="deepskyblue", ylim = c(0, 20))
 par(new = TRUE)
 hist(aggdata$steps, breaks = 25, xlab = "Steps", main = "", col="royalblue", ylim = c(0, 20))
 
 ```
-
+  
 ## Are there differences in activity patterns between weekdays and weekends?
 1. Create a character vector containing the day of the week, from the date values in the tidyData dataset and using the weekdays() funcation.
 
 Then create the 'workDays' factor vector based on the day of the week, which indicates if the day is a "weekday" or "weekend". The factor vextor is then bound to the tidyData dataset.
 
 ```{r echo = TRUE}
-
 dayOfWeek <- weekdays(tidyData$date)
 workDay <- factor(levels=c("weekend", "weekday"))
 
@@ -166,7 +156,6 @@ tidyData <- cbind(tidyData, workDay)
 
 The resulting aggregate data is then plotted using the base plot system.
 ```{r echo = TRUE}
-
 weekdayData <- subset(tidyData, workDay == "weekday", select = c(interval, steps, workDay))
 weekendData <- subset(tidyData, workDay == "weekend", select = c(interval, steps, workDay))
 aggdata3 <- aggregate(steps ~ interval, data=weekdayData, mean)
