--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -20,7 +20,7 @@ stepData$date <- as.Date(stepData$date)
   
 ## What is mean total number of steps taken per day?
 1. Aggregate the steps by date, using sum as the function. Plotted a Histogram of aggregate step data.
-```{r echo = TRUE}
+```{r hist_Steps, echo = TRUE}
 aggdata <- aggregate(steps ~ date, data=stepData, sum)
 hist(aggdata$steps, breaks = 25, xlab = "Steps", main = "Histogram of Steps")
 
@@ -42,7 +42,7 @@ print(paste("The medium is", aggdataMedian))
   
 ## What is the average daily activity pattern?
 1. Aggregate the steps by interval period, using mean as the function. Produced a line plot, with interval as the x-axis and steps for the y-axis
-```{r echo = TRUE}
+```{r plot_DailyActivity, echo = TRUE}
 aggdata2 <- aggregate(steps ~ interval, data=stepData, mean)
 plot(aggdata2, type = "l", main = "Line Plot of Average Steps Tken vs 5-Minute Interval Times")
 
@@ -101,7 +101,7 @@ for(i in 1:n) {
 ```
 
 4. Plot a Histogram of the aggregate step for the new tidy dataset.
-```{r echo = TRUE}
+```{r hist_Tidydata, echo = TRUE}
 aggTidyData <- aggregate(steps ~ date, data=tidyData, sum)
 hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "Histogram of Steps")
 
@@ -119,7 +119,7 @@ print(paste("The medium is", aggTidyDataMedian))
 
 
 By overlying the histogram of the original dataset and the new tidy dataset the difference is clearly illustrated. The method used to fill the missing data has only increased the frequency of the mean, leaving all other bins unchanged.
-```{r echo = TRUE}
+```{r hist_TidydataOverlay, echo = TRUE}
 hist(aggTidyData$steps, breaks = 25, xlab = "Steps", main = "Overly of both Histograms", col="deepskyblue", ylim = c(0, 20))
 par(new = TRUE)
 hist(aggdata$steps, breaks = 25, xlab = "Steps", main = "", col="royalblue", ylim = c(0, 20))
@@ -155,7 +155,7 @@ tidyData <- cbind(tidyData, workDay)
 2. Create seperate subet datasets for weekday and weekend data, and then aggregate the new datasets. The aggregation is steps by time interval.
 
 The resulting aggregate data is then plotted using the base plot system.
-```{r echo = TRUE}
+```{r plot_WeekvWeekend, echo = TRUE}
 weekdayData <- subset(tidyData, workDay == "weekday", select = c(interval, steps, workDay))
 weekendData <- subset(tidyData, workDay == "weekend", select = c(interval, steps, workDay))
 aggdata3 <- aggregate(steps ~ interval, data=weekdayData, mean)
